ana-hatlar-taslak

--- a/design-system.html
+++ b/design-system.html
@@ -1,15 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Witflix Arayüzü</title>
     <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="style.css"/>
-
-  </head>
-  <body>
-    <div id="app">Naim</div>
-  </body>
+</head>
+<body>
+    <header>
+        <span class="color-system">COLOR SYSTEM</span>
+    </header>
+    <main>
+        <div class="content-box">
+            <div class="main-box red-box">
+                <h2>PRIMARY RED</h2>
+                <div class="red-content-box">
+                    <p class="red-text">RED</p>
+                </div>
+            </div>
+            <div class="main-box black-box">
+                <h2>PRIMARY BLACK</h2>
+                <div class="black-content-box">
+                    <p class="black-text">BLACK</p>
+                </div>
+            </div>
+        </div>
+        <div class="typography-box">
+            <h3>TYPOGRAPHY COLOR</h3>
+            <div class="color-squares">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+        </div>
+        <div class="accent-box">
+            <h3>ACCENT COLOR</h3>
+            <div class="accent-squares">
+                <div class="accent-square"></div>
+                <div class="accent-square"></div>
+                <div class="accent-square"></div>
+            </div>
+            <div class="final-box">
+              <div class="top">Background Color</div> <!-- Üst kısım -->
+              <div class="bottom">
+                  <div class="small-box"></div> <!-- İlk alt kutu -->
+                  <div class="small-box"></div> <!-- İkinci alt kutu -->
+              </div>
+          </div>
+          
+      
+    </main>
+</body>
 </html>
